erDiagram
    USER {
        ObjectId _id PK
        string firstName
        string lastName
        string email UK
        string passwordHash
        enum role "customer | seller | admin"
        boolean isEmailConfirmed
        boolean isDeleted
        string googleId
        string avatarUrl
        datetime createdAt
        datetime updatedAt
    }

    REFRESH_TOKEN {
        ObjectId _id PK
        ObjectId userId FK
        string token UK
        datetime expiresAt
        datetime createdAt
    }

    ADDRESS {
        ObjectId _id PK
        ObjectId userId FK
        string street
        string city
        string state
        string country
        string zipCode
        boolean isDefault "one default per user (partial unique index)"
    }

    SELLER_PROFILE {
        ObjectId _id PK
        ObjectId userId FK
        string storeName UK
        string description
        string logoUrl
        enum status "pending | approved | suspended"
        Decimal128 totalEarnings
        datetime createdAt
    }

    CATEGORY {
        ObjectId _id PK
        string name UK
        string slug UK
        ObjectId parentId FK
        string imageUrl
        boolean isActive
    }

    PRODUCT {
        ObjectId _id PK
        ObjectId sellerProfileId FK "references SELLER_PROFILE._id"
        ObjectId categoryId FK
        string name
        string slug UK
        string description
        Decimal128 price
        Decimal128 discountedPrice
        int stock
        boolean isActive
        float averageRating "derived; keep atomic updates or recompute"
        int reviewCount
        datetime createdAt
        datetime updatedAt
    }

    PRODUCT_IMAGE {
        ObjectId _id PK
        ObjectId productId FK
        string url
        string cloudinaryPublicId
        boolean isPrimary
        int sortOrder
        datetime createdAt
        datetime updatedAt
        "partial unique index: (productId where isPrimary=true)"
    }

    REVIEW {
        ObjectId _id PK
        ObjectId productId FK
        ObjectId userId FK
        int rating "1-5"
        string comment
        boolean isVerifiedPurchase
        datetime createdAt
    }

    WISHLIST {
        ObjectId _id PK
        ObjectId userId FK
        datetime createdAt
        "unique index on userId (one wishlist per user)"
    }

    WISHLIST_ITEM {
        ObjectId _id PK
        ObjectId wishlistId FK
        ObjectId productId FK
        datetime addedAt
        "compound unique: (wishlistId, productId)"
    }

    CART {
        ObjectId _id PK
        ObjectId userId FK
        string guestToken
        datetime updatedAt
        "one cart per user OR one per guestToken; enforce either-or in app/DB"
    }

    CART_ITEM {
        ObjectId _id PK
        ObjectId cartId FK
        ObjectId productId FK
        int quantity
        Decimal128 priceSnapshot
        datetime createdAt
        "compound unique: (cartId, productId)"
    }

    PROMO_CODE {
        ObjectId _id PK
        string code UK
        enum discountType "percentage | fixed"
        Decimal128 discountValue
        Decimal128 minOrderAmount
        int usageLimit
        int usageCount
        datetime expiresAt
        boolean isActive
    }

    ORDER {
        ObjectId _id PK
        ObjectId userId FK
        ObjectId addressId FK
        ObjectId promoCodeId FK
        enum status "pending | processing | shipped | delivered | cancelled"
        Decimal128 subtotal
        Decimal128 discountAmount
        Decimal128 shippingCost
        Decimal128 total
        string trackingNumber
        datetime placedAt
        datetime updatedAt
    }

    ORDER_ITEM {
        ObjectId _id PK
        ObjectId orderId FK
        ObjectId productId FK
        ObjectId sellerId FK
        string productNameSnapshot
        Decimal128 priceSnapshot
        int quantity
        Decimal128 lineTotal
        datetime createdAt
    }

    PAYMENT {
        ObjectId _id PK
        ObjectId orderId FK
        enum provider "stripe | paypal"
        string providerTransactionId UK
        enum status "pending | completed | failed | refunded"
        Decimal128 amount
        string currency
        datetime createdAt
    }

    BANNER {
        ObjectId _id PK
        string title
        string imageUrl
        string linkUrl
        int sortOrder
        boolean isActive
        datetime startsAt
        datetime endsAt
    }

    EMAIL_LOG {
        ObjectId _id PK
        ObjectId userId FK
        enum type "confirmation | password-reset | order-placed | order-shipped"
        string recipient
        enum status "sent | failed"
        datetime sentAt
    }

    USER ||--o{ REFRESH_TOKEN : "has"
    USER ||--o{ ADDRESS : "has"
    USER ||--o| SELLER_PROFILE : "may have"
    USER ||--o| WISHLIST : "has"
    USER ||--o| CART : "has"
    USER ||--o{ REVIEW : "writes"
    USER ||--o{ ORDER : "places"
    USER ||--o{ EMAIL_LOG : "receives"

    SELLER_PROFILE ||--o{ PRODUCT : "lists"
    SELLER_PROFILE ||--o{ ORDER_ITEM : "fulfils"

    CATEGORY ||--o{ PRODUCT : "contains"
    CATEGORY ||--o{ CATEGORY : "parent of"

    PRODUCT ||--o{ PRODUCT_IMAGE : "has"
    PRODUCT ||--o{ REVIEW : "receives"
    PRODUCT ||--o{ CART_ITEM : "added to"
    PRODUCT ||--o{ WISHLIST_ITEM : "saved in"
    PRODUCT ||--o{ ORDER_ITEM : "included in"

    WISHLIST ||--o{ WISHLIST_ITEM : "contains"
    CART ||--o{ CART_ITEM : "contains"

    ORDER ||--o{ ORDER_ITEM : "contains"
    ORDER ||--o| PAYMENT : "paid via"
    ORDER }o--o| PROMO_CODE : "applies"
    ORDER }o--|| ADDRESS : "ships to"

%%
%% Database Notes & Recommended Indexes / Validators
%% - Use Decimal128 or integer cents for all money fields to avoid float precision errors.
%% - Rename PRODUCT.sellerId -> sellerProfileId (references SELLER_PROFILE._id).
%% - Unique/partial indexes:
%%   * USER.email: unique, case-insensitive (store lowercase).
%%   * SELLER_PROFILE.userId: unique (one profile per user).
%%   * ADDRESS: partial unique on (userId) where isDefault=true.
%%   * PRODUCT_IMAGE: partial unique on (productId) where isPrimary=true.
%%   * WISHLIST.userId: unique (one wishlist per user).
%%   * WISHLIST_ITEM: compound unique (wishlistId, productId).
%%   * CART.userId and CART.guestToken: unique (enforce one cart per actor).
%%   * CART_ITEM: compound unique (cartId, productId).
%%   * PROMO_CODE.code: unique.
%%   * REFRESH_TOKEN: unique token + TTL on expiresAt for cleanup.
%% - Schema validation: enforce enums, rating range (1-5), required fields.
%% - Embedding suggestions:
%%   * Embed ORDER_ITEM array inside ORDER for simpler reads.
%%   * Embed PRODUCT_IMAGE array inside PRODUCT unless images queried independently.
%%   * Embed CART.items inside CART unless extremely large.
%% - Concurrency: use transactions for order placement, payments, stock decrement, and promo redemption.
%% - Maintain createdAt/updatedAt across collections for auditing.
%% - Prevent category cycles in application logic; store ancestor path for fast queries.
%%
